# notary-demo

./: .gitignore  .gitmodules  Cargo.toml  README.md  narrative.md  response.txt  spec.md
notary/: Cargo.toml
notary/src/: api.rs  cli.rs  db.rs  lib.rs  main.rs  tlsn_service.rs
prover/: Cargo.toml
prover/src/: cli.rs  error.rs  main.rs  prover.rs
scratch/: context.md
src/: certs.rs  inspect.rs  main.rs  notary.rs  prover.rs  raw_request.rs  request.rs
