[package]
name = "stamp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rcgen = "0.11"
x509-parser = "0.15"
tokio = { version = "1.35", features = ["full"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }

# TLSNotary dependencies
notary-client = { git = "https://github.com/tlsnotary/tlsn", package = "notary-client" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-core" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-prover" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-formats" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-common" }
tls-server-fixture = { git = "https://github.com/tlsnotary/tlsn", package = "tls-server-fixture" }
tlsn-tls-core = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-tls-core" }

# HTTP client
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = { version = "0.3", features = ["io"] }
reqwest = { version = "0.11", features = ["json"] }
rustls = { version = "0.22" }
rustls-pki-types = "1.0"
tokio-rustls = "0.25"

# Utility crates
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
hex = "0.4"
chrono = "0.4"

[workspace]
members = []
