[package]
name = "notary"
version = "0.1.0"
edition = "2024"
authors = ["ChatGPT", "Claude", "Cursor", "zomglings"]

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
env_logger = "0.10.1"
log = "0.4.20"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
